# plcompositor

./: Makefile  Makefile.in  README.md  compositor_schema.json  configure.ac
oev_tools/: ev_mosaic_viewer.py  ev_profile.py  quality_hist_tool.py
src/: Makefile  compositor.cpp  compositor.h  darkestquality.cpp  greenestquality.cpp  json_util.cpp  landsat8cloudquality.cpp  landsat8cloudquality_cfmask.cpp  landsat8cloudquality_sr.cpp  landsat8quality_cfmask.cpp  landsat8snowquality.cpp  linecompositor.cpp  medianlinecompositor.cpp  percentilequality.cpp  plccontext.cpp  plchistogram.cpp  plcinput.cpp  plcline.cpp  qualityfromfile.cpp  qualitylinecompositor.cpp  qualitymethodbase.cpp  reddestquality.cpp  samesourcequality.cpp  scenemeasurequality.cpp  sourcepostprocess.cpp
tests/: .gitignore  Makefile.in  compositor_tests.py  saojose_tests.py  small_tests.py
tests/data/: 2x2_float_template.tif  2x2_gray_template.tif  2x2_gray_uint16_template.tif  2x2_rgb_template.tif  2x2_rgba_template.tif  3x3_float_template.tif  3x3_gray_template.tif
